Tuning of craft algorithm
Delta arcs can prioritize the presence of a layer by name, e.g. containing "kick" #180242564

- Compute 'incoming' layers intrinsically in the same algorithm to avoid conflict